--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -4,9 +4,11 @@ section .mainPage {
   text-align: left;
   align-items: left;
 }
+
 .title {
   padding: 1em;
 }
+
 .main-title {
   font-family: "Open Sans", sans-serif;
   font-size: 3rem;
@@ -62,10 +64,15 @@ section .mainPage {
 }
 .learnmore {
   text-decoration: none;
-  text-align: left;
-  margin-left: 3em;
-  color: blue;
+  border: 1px dashed black;
+  width: 20%;
+  padding: 0.7em;
+  text-align: center;
 }
+.no-decoration {
+  text-decoration: none;
+}
+
 .no-underline {
   text-decoration: none;
 }
@@ -165,4 +172,76 @@ section .mainPage {
 .content-main {
   text-align: center;
   align-items: center;
+}
+
+.charger {
+  background-image: url("https://www.clipartmax.com/png/middle/470-4704466_ev-charging-on-campus-electric-vehicle-charging-station-icon.png");
+}
+
+.EVselectormenu {
+  font-family: "Open Sans", sans-serif;
+  font-size: 5rem;
+  font-weight: 800;
+  color: #2c292b;
+  text-align: left;
+}
+
+.EVselectortitle {
+  font-family: "Open Sans", sans-serif;
+  font-size: 4rem;
+  font-weight: 800;
+  color: #2c292b;
+  text-align: left;
+}
+.center-container {
+  width: 80%;
+}
+
+.long {
+  margin-top: 15%;
+}
+.short {
+  margin-top: 5%;
+}
+
+.medium {
+  margin-top: 10%;
+}
+
+.learnmore-right {
+  text-decoration: underline;
+  width: 30%;
+  padding: 0.7em;
+  text-align: center;
+  margin-left: 70%;
+  color: black;
+  font-size: 1.3em;
+}
+.charger {
+  width: 40%;
+}
+
+.detailsofmap {
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  opacity: 0.9;
+  border: 1px solid black;
+  z-index: 1000;
+  margin-top: -20em;
+  margin-left: 1em;
+  position: absolute;
+}
+
+.logosolarfarm {
+  height: 60px;
+  width: 60px;
+}
+
+.icons {
+  float: left;
+  display: inline;
+  margin-right: 0.5em;
+  margin-top: 1em;
+  margin-left: 1em;
 }
