--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -414,3 +414,15 @@ section .mainPage {
   margin-left: 5em;
   margin-right: 10em;
 }
+
+.bufferdel {
+  z-index: 50000;
+  background-color: white;
+  border: 1px solid gray;
+  margin-left: 0.8em;
+  position: absolute;
+  margin-top: -33em;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+}
