--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Pacifico&display=swap");
+
+body{
+  overflow: hidden;
+}
+
+
 section .mainPage {
   text-align: left;
   align-items: left;
@@ -425,4 +431,34 @@ section .mainPage {
   width: 63px;
   height: 60px;
   text-align: center;
+}
+
+
+.container-paragraph{
+  width: 75%;
+}
+
+.intro-page-grid {
+  margin-top:3em;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.intro-page-grid-item{
+  padding: 5px;
+
+}
+
+.image-intro-page{
+  height: 250px;
+  width: 420px;
+}
+
+.main-section-intro{
+  height: 100vh;
+  width: 100vw;
+  margin-top: 9em;
+  padding: 3em;
+  overflow: hidden;
 }
