--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -2,10 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Pacifico&display=swap");
 
 body{
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
-
-
 section .mainPage {
   text-align: left;
   align-items: left;
@@ -442,7 +441,7 @@ section .mainPage {
   margin-top:3em;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .intro-page-grid-item{
@@ -461,4 +460,18 @@ section .mainPage {
   margin-top: 9em;
   padding: 3em;
   overflow: hidden;
+}
+
+.button-click{
+  margin-top: 1em;
+  width: 25em;
+  height: 3em;
+  border-radius: 10px;
+  border: black dotted 2px;
+  background-color: white;
+}
+
+.hyperlinked{
+  text-decoration: none;
+  color: black;
 }
