The intro is fixed

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -457,11 +457,12 @@ section .mainPage {
   margin-top:3em;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .intro-page-grid-item{
   padding: 5px;
+  width: auto;
 
 }
 
@@ -479,7 +480,7 @@ section .mainPage {
 }
 
 .button-click{
-  margin-top: 1em;
+  margin-top: 3em;
   width: 25em;
   height: 3em;
   border-radius: 10px;
@@ -490,4 +491,8 @@ section .mainPage {
 .hyperlinked{
   text-decoration: none;
   color: black;
+}
+
+.explanation{
+  width: 80%;
 }
